--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.1",
@@ -13,11 +14,15 @@
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
     "npm-run-all": "^4.1.3",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mithril": "^1.1.6",
+    "muicss": "^0.9.41"
+  },
   "scripts": {
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack -p --progress --mode production --config webpack.config.js"
