--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "webpack-dev-server": "^3.1.9",
+    "worker-loader": "^2.0.0"
   },
   "dependencies": {
     "mithril": "^1.1.6",
