--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "muicss": "^0.9.41"
   },
   "scripts": {
+    "start": "npm run dev",
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack -p --progress --mode production --config webpack.config.js"
   }
