--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^2.0.0-beta.0",
     "npm-run-all": "^4.1.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
@@ -27,6 +29,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
-    "build": "webpack -p --progress --mode production --config webpack.config.js"
+    "build": "webpack -p --progress --mode production --config webpack.config.js",
+    "test": "mocha-webpack 'test/*.js'"
   }
 }
