--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "esm": "^3.0.84",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
-    "mocha-webpack": "^2.0.0-beta.0",
     "npm-run-all": "^4.1.3",
     "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
@@ -33,6 +33,6 @@
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack -p --progress --mode production --config webpack.config.js",
     "lint": "eslint src/**/*.js",
-    "test": "mocha-webpack 'test/*.js'"
+    "test": "./node_modules/mocha/bin/mocha test/**/*.js --reporter spec -r esm"
   }
 }
